logs/raptus.article.files.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raptus'...
Listing './lib/python3.5/site-packages/raptus/article'...
Listing './lib/python3.5/site-packages/raptus/article/core'...
Listing './lib/python3.5/site-packages/raptus/article/core/browser'...
Listing './lib/python3.5/site-packages/raptus/article/core/content'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/de'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/en'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/fr'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/it'...
Listing './lib/python3.5/site-packages/raptus/article/core/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/core/profiles'...
Listing './lib/python3.5/site-packages/raptus/article/core/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/article/core/profiles/default/types'...
Listing './lib/python3.5/site-packages/raptus/article/core/skins'...
Listing './lib/python3.5/site-packages/raptus/article/core/skins/raptus_article_core'...
Compiling './lib/python3.5/site-packages/raptus/article/core/skins/raptus_article_core/article_moveitem.py'...
***   File "./lib/python3.5/site-packages/raptus/article/core/skins/raptus_article_core/article_moveitem.py", line 12
    return context.REQUEST.RESPONSE.redirect('%s#%s' % (context.absolute_url(), anchor))
                                                                                       ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/raptus/article/core/upgrades'...
Listing './lib/python3.5/site-packages/raptus/article/core/upgrades/profiles'...
Listing './lib/python3.5/site-packages/raptus/article/core/upgrades/profiles/10_to_11'...
Listing './lib/python3.5/site-packages/raptus/article/files'...
Listing './lib/python3.5/site-packages/raptus/article/files/browser'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales/de'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales/fr'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales/it'...
Listing './lib/python3.5/site-packages/raptus/article/files/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/article/files/profiles'...
Listing './lib/python3.5/site-packages/raptus/article/files/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/article/files/profiles/default/types'...
Listing './lib/python3.5/site-packages/raptus.article.core-2.2.egg-info'...
Listing './lib/python3.5/site-packages/raptus.article.files-2.0b8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
